--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,10 @@
 version: '3'
 
 services:
-  rem-be:
-    container_name: rem-be:latest
+  rem_be:
     build: .
     ports:
-      - "8080:8080"
+      - "8090:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=prod
     volumes:
