--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
     build: .
     ports:
       - "8090:8080"
+    depends_on:
+      - postgres
     environment:
       - SPRING_PROFILES_ACTIVE=prod
     volumes:
