--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,12 @@
 spring:
   application:
     name: rem
+  flyway:
+    enabled: true
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -14,7 +16,7 @@ spring:
           pool_size: 20
     open-in-view: true
   datasource:
-    url: jdbc:postgresql://cluj.olahistvan.com:5432/rem
+    url: jdbc:postgresql://aws.dianagrigore.com:5432/rem
     username: rem
     password: rem
   sql:
