--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,8 +17,8 @@ spring:
     open-in-view: true
   datasource:
     url: jdbc:postgresql://aws.dianagrigore.com:5432/rem
-    username: rem
-    password: rem
+    username: postgres
+    password: example
   sql:
     init:
       platform: postgres
